--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
             <div class="cal-space">
               <button data-btn-reset class="space-2">AC</button>
               <button data-btn-delete >DEL</button>
-              <button data-btn-divide data-btn-operation>÷</button>
+              <button data-btn-operation>÷</button>
             </div>
             <div class="cal-space">
               <button data-btn-number >1</button>
               <button data-btn-number>2</button>
               <button data-btn-number>3</button>
-              <button data-btn-multiple data-btn-operation>*</button>
+              <button data-btn-operation>*</button>
             </div>
             <div class="cal-space">
               <button data-btn-number>4</button>
               <button data-btn-number>5</button>
               <button data-btn-number>6</button>
-              <button data-btn-minus data-btn-operation>-</button>
+              <button data-btn-operation>-</button>
             </div>
             <div class="cal-space">
               <button data-btn-number>7</button>
               <button data-btn-number>8</button>
               <button data-btn-number>9</button>
-              <button data-btn-plus data-btn-operation>+</button>
+              <button data-btn-operation>+</button>
             </div>
             <div class="cal-space">
               <button data-btn-number>.</button>
               <button data-btn-number>0</button>
-              <button data-btn-equal data-btn-operation class="space-2">=</button>
+              <button data-btn-operation class="space-2">=</button>
             </div>
           </div>
         </div>
