--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
           </div>
         </div>
       </div>
+      <div class="history">
+        <h2 class="history-text">기록</h2>
+      </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
